@@ -9,7 +9,7 @@
     <option name="filePathToZoomLevelMap">
       <map>
         <entry key="app/src/main/res/drawable/ic_round_visibility_off.xml" value="0.3640625" />
-        <entry key="app/src/main/res/layout/activity_settings.xml" value="0.3484375" />
+        <entry key="app/src/main/res/layout/activity_settings.xml" value="0.3345" />
         <entry key="app/src/main/res/layout/fragment_bottomsheet_changelog.xml" value="0.3484375" />
         <entry key="app/src/main/res/layout/fragment_bottomsheet_feedback.xml" value="0.3484375" />
         <entry key="app/src/main/res/layout/fragment_bottomsheet_text.xml" value="0.3484375" />
